force-app/main/default/objects/Product2/fields/COMM_Airport__c.field-meta.xml
<CustomField>
    <fullName>COMM_Airport__c</fullName>
    <description>Airport in which the product is available</description>
    <label>Airport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Airport</valueSetName>
    </valueSet>
</CustomField>