force-app/main/default/objects/Product2/fields/COMM_Alarmistic__c.field-meta.xml
<CustomField>
    <fullName>COMM_Alarmistic__c</fullName>
    <description>The alarmistic percentage defined in this field will be the same for the default capacity and the capacity defined for a specific period.</description>
    <label>Alarmistic %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>