force-app/main/default/objects/Product2/fields/COMM_AvailabilityDeterminedInCore__c.field-meta.xml
<CustomField>
    <fullName>COMM_AvailabilityDeterminedInCore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine if the Product&apos;s Availability is controlled in Core or in Commerce</description>
    <label>Availability determined in Core</label>
    <type>Checkbox</type>
</CustomField>