force-app/main/default/objects/Product2/fields/COMM_ClosingOperatingHours__c.field-meta.xml
<CustomField>
    <fullName>COMM_ClosingOperatingHours__c</fullName>
    <description>Specific time during which the product stops being operational to be sold to the customers</description>
    <label>Closing Operating Hours</label>
    <type>Time</type>
</CustomField>