force-app/main/default/objects/Product2/fields/COMM_CPMS__c.field-meta.xml
<CustomField>
    <fullName>COMM_CPMS__c</fullName>
    <description>Which CPMS provider is associated with park where the reservation was done</description>
    <label>Parking System Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_CPMS</valueSetName>
    </valueSet>
</CustomField>