force-app/main/default/objects/Product2/fields/COMM_DependingOnProduct__c.field-meta.xml
<CustomField>
    <fullName>COMM_DependingOnProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate the Product requires another Product to also be bought in order to buy it</description>
    <inlineHelpText>Check if Product requires another Product to be bought together</inlineHelpText>
    <label>Depending on a Product?</label>
    <type>Checkbox</type>
</CustomField>