force-app/main/default/objects/Product2/fields/COMM_HasUpdateForCommerce__c.field-meta.xml
<CustomField>
    <fullName>COMM_HasUpdateForCommerce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To flag if a Product record has an update to be sent to Salesforce Commerce.</description>
    <label>Has update for Commerce?</label>
    <type>Checkbox</type>
</CustomField>