force-app/main/default/objects/Product2/fields/COMM_IntegrationRequestBody__c.field-meta.xml
<CustomField>
    <fullName>COMM_IntegrationRequestBody__c</fullName>
    <description>To set Product integration body request detail in JSON format, for integration in Salesforce Commerce.</description>
    <label>Integration Request Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>