force-app/main/default/objects/Product2/fields/COMM_IsIntegratedInCommerce__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsIntegratedInCommerce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To flag if a Product record is integrated in Salesforce Commerce.</description>
    <label>Is Integrated in Commerce?</label>
    <type>Checkbox</type>
</CustomField>