force-app/main/default/objects/Product2/fields/COMM_LongDescription__c.field-meta.xml
<CustomField>
    <fullName>COMM_LongDescription__c</fullName>
    <description>Long Description for Product shown in Commerce</description>
    <label>Product Long Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>