force-app/main/default/objects/Product2/fields/COMM_OfferType__c.field-meta.xml
<CustomField>
    <fullName>COMM_OfferType__c</fullName>
    <description>Type of Offer associated with the Product. Used in Commerce to decorate product&apos;s brand.</description>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_OfferType</valueSetName>
    </valueSet>
</CustomField>