force-app/main/default/objects/Product2/fields/COMM_OpeningOperatingHours__c.field-meta.xml
<CustomField>
    <fullName>COMM_OpeningOperatingHours__c</fullName>
    <description>Specific time during which the product starts being operational to be sold to the customers</description>
    <label>Opening Operating Hours</label>
    <type>Time</type>
</CustomField>