force-app/main/default/objects/Product2/fields/COMM_ParentProduct__c.field-meta.xml
<CustomField>
    <fullName>COMM_ParentProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Product for the Product Record</description>
    <label>Parent Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Airport needs to be the same in both Parent and Child Product</errorMessage>
        <filterItems>
            <field>Product2.COMM_Airport__c</field>
            <operation>equals</operation>
            <valueField>$Source.COMM_Airport__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>