force-app/main/default/objects/Product2/fields/COMM_ParentProductCode__c.field-meta.xml
<CustomField>
    <fullName>COMM_ParentProductCode__c</fullName>
    <description>Product Code of Parent Product</description>
    <formula>COMM_ParentProduct__r.ProductCode</formula>
    <label>Parent Product Code</label>
    <type>Text</type>
</CustomField>