force-app/main/default/objects/Product2/fields/COMM_PaymentType__c.field-meta.xml
<CustomField>
    <fullName>COMM_PaymentType__c</fullName>
    <description>Type of payment that can be acquired for the product</description>
    <label>Payment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_PaymentType</valueSetName>
    </valueSet>
</CustomField>