force-app/main/default/objects/Product2/fields/COMM_PriceDeterminedInCore__c.field-meta.xml
<CustomField>
    <fullName>COMM_PriceDeterminedInCore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if Product Price is indicated by Core or Commerce</description>
    <label>Price determined in Core</label>
    <type>Checkbox</type>
</CustomField>