force-app/main/default/objects/Product2/fields/COMM_ProductCodeDepedencies__c.field-meta.xml
<CustomField>
    <fullName>COMM_ProductCodeDepedencies__c</fullName>
    <description>Code of the Product that the current Product requires to be bough in order to also buy this Product</description>
    <inlineHelpText>Use comma &quot;,&quot; to separate different product codes</inlineHelpText>
    <label>Product Code Depedent?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>