force-app/main/default/objects/Product2/fields/COMM_ProductCodeUnique__c.field-meta.xml
<CustomField>
    <fullName>COMM_ProductCodeUnique__c</fullName>
    <description>Technical field with replication of Product Code as unique value.</description>
    <label>Product Code Unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>