force-app/main/default/objects/Product2/fields/COMM_ProductFeature__c.field-meta.xml
<CustomField>
    <fullName>COMM_ProductFeature__c</fullName>
    <description>List of Product Features to be shown in commerce</description>
    <inlineHelpText>Use semicolon &apos;;&apos; to separate different features</inlineHelpText>
    <label>Product Feature</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>