force-app/main/default/objects/Product2/fields/COMM_ProductInventory__c.field-meta.xml
<CustomField>
    <fullName>COMM_ProductInventory__c</fullName>
    <description>Inventory ID associated with the Product (for integration with Commerce using OCAPI)</description>
    <label>Product Inventory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>