force-app/main/default/objects/Product2/fields/COMM_ProductType__c.field-meta.xml
<CustomField>
    <fullName>COMM_ProductType__c</fullName>
    <description>This field defines de type of the product</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>single</fullName>
            </value>
            <value>
                <fullName>bundle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>