force-app/main/default/objects/Product2/fields/COMM_Requires_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>COMM_Requires_Affiliate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field to be used to discern the group availability in commerce</description>
    <label>Requires Affiliate?</label>
    <type>Checkbox</type>
</CustomField>