force-app/main/default/objects/Product2/fields/COMM_RequiresAffiliate__c.field-meta.xml
<CustomField>
    <fullName>COMM_RequiresAffiliate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if this field is true, the product will only be shown to affiliate users in commerce site
https://jira.ana.pt/browse/TICKET-261961</description>
    <label>Requires Affiliate?</label>
    <type>Checkbox</type>
</CustomField>