force-app/main/default/objects/Product2/fields/COMM_RequiresAirportStaff__c.field-meta.xml
<CustomField>
    <fullName>COMM_RequiresAirportStaff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox if checked indicates that this product will be visible in Commerce for an account that was approved as Individual Staff.</description>
    <label>Requires Airport Staff?</label>
    <type>Checkbox</type>
</CustomField>