force-app/main/default/objects/Product2/fields/COMM_SAPLocation__c.field-meta.xml
<CustomField>
    <fullName>COMM_SAPLocation__c</fullName>
    <description>SAP Location product code as defined in SAP.</description>
    <label>SAP Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>