force-app/main/default/objects/Product2/fields/COMM_SoldinAiport__c.field-meta.xml
<CustomField>
    <fullName>COMM_SoldinAiport__c</fullName>
    <description>The list of stores where the product can be sold on ecommerce</description>
    <inlineHelpText>The list of airports where the product can be sold on ecommerce</inlineHelpText>
    <label>Sold in Airport</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COMM_Airport</valueSetName>
    </valueSet>
</CustomField>