force-app/main/default/objects/Product2/fields/COMM_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>COMM_SubCategory__c</fullName>
    <description>Used to define the sub-category of the product.</description>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Park</fullName>
            </value>
            <value>
                <fullName>Lounge</fullName>
            </value>
            <value>
                <fullName>Fast Lane</fullName>
            </value>
            <value>
                <fullName>Fast Track</fullName>
            </value>
            <value>
                <fullName>Courtesy</fullName>
            </value>
            <value>
                <fullName>Exempt Official Entity</fullName>
            </value>
            <value>
                <fullName>ANA + Entities</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>RAC / Shuttle NL</fullName>
            </value>
            <value>
                <fullName>Staff Company</fullName>
            </value>
            <value>
                <fullName>Staff Individual</fullName>
            </value>
            <value>
                <fullName>Fast Track Plus</fullName>
            </value>
            <value>
                <fullName>Lounge Adult</fullName>
            </value>
            <value>
                <fullName>Lounge Child</fullName>
            </value>
            <value>
                <fullName>Lounge Adult with shower</fullName>
            </value>
            <value>
                <fullName>Lounge Child with shower</fullName>
            </value>
            <value>
                <fullName>Lounge Adult Schengen</fullName>
            </value>
            <value>
                <fullName>Lounge Child Schengen</fullName>
            </value>
            <value>
                <fullName>Lounge Adult Non Schengen</fullName>
            </value>
            <value>
                <fullName>Lounge Child Non Schengen</fullName>
            </value>
            <value>
                <fullName>Terminal</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Lounge Adult Non -Schengen</fullName>
                <isActive>false</isActive>
                <label>Lounge Adult Non -Schengen</label>
            </value>
            <value>
                <fullName>Lounge Child Non - Schengen</fullName>
                <isActive>false</isActive>
                <label>Lounge Child Non - Schengen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>