force-app/main/default/objects/Product2/fields/COMM_Tax__c.field-meta.xml
<CustomField>
    <fullName>COMM_Tax__c</fullName>
    <description>Defines the tax used for the product based on location</description>
    <label>Tax</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>COMM_Airport__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continent</fullName>
            </value>
            <value>
                <fullName>Madeira</fullName>
            </value>
            <value>
                <fullName>Azores</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>