force-app/main/default/objects/Product2/fields/COMM_TimeToTerminal__c.field-meta.xml
<CustomField>
    <fullName>COMM_TimeToTerminal__c</fullName>
    <description>Minutes indicating how far the product is from the airport terminal</description>
    <label>Time to Terminal (in Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>