force-app/main/default/objects/Product2/fields/COMM_TimeZoneByAirport__c.field-meta.xml
<CustomField>
    <fullName>COMM_TimeZoneByAirport__c</fullName>
    <description>Formula field used to discover product Timezone based on the Airport.</description>
    <formula>IF( OR( ISPICKVAL(COMM_Airport__c, &apos;LIS&apos;), ISPICKVAL(COMM_Airport__c, &apos;OPO&apos;), ISPICKVAL(COMM_Airport__c, &apos;FAO&apos;)),
 &apos;Europe/Lisbon&apos;,
 IF( ISPICKVAL(COMM_Airport__c, &apos;FNC&apos;),
  &apos;Atlantic/Madeira&apos;,
   IF( ISPICKVAL(COMM_Airport__c, &apos;PDL&apos;),
    &apos;Atlantic/Azores&apos;,
    &apos;&apos;
  )
 )
)</formula>
    <label>Time Zone by Airport</label>
    <type>Text</type>
</CustomField>