force-app/main/default/objects/Product2/fields/COMM_ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>COMM_ValidFrom__c</fullName>
    <defaultValue>DATETIMEVALUE(TEXT(TODAY()) + &quot; 00:00:00&quot;)</defaultValue>
    <description>Beginning date for which the product is deemed valid</description>
    <label>Valid From</label>
    <type>DateTime</type>
</CustomField>