force-app/main/default/objects/Product2/fields/COMM_ValidTo__c.field-meta.xml
<CustomField>
    <fullName>COMM_ValidTo__c</fullName>
    <defaultValue>DATETIMEVALUE(TEXT(TODAY()) + &quot; 23:59:59&quot;)</defaultValue>
    <description>End date for which the product is deemed valid</description>
    <label>Valid To</label>
    <type>DateTime</type>
</CustomField>