force-app/main/default/objects/Product2/fields/COMM_WhereProductAvailable__c.field-meta.xml
<CustomField>
    <fullName>COMM_WhereProductAvailable__c</fullName>
    <description>Multi Picklist that indicates in which platform the product will be available</description>
    <label>Where is the product available?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Subscriptions Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>