force-app/main/default/objects/Product2/recordTypes/COMM_GiftCard.recordType-meta.xml
<RecordType>
    <fullName>COMM_GiftCard</fullName>
    <active>true</active>
    <description>This record type will used to typify gift cards</description>
    <label>Gift Card</label>
</RecordType>