force-app/main/default/objects/Product2/recordTypes/COMM_Product.recordType-meta.xml
<RecordType>
    <fullName>COMM_Product</fullName>
    <active>true</active>
    <description>This record type will be used to typify the products</description>
    <label>Product</label>
</RecordType>