force-app/main/default/objects/Product2/recordTypes/COMM_Subscription.recordType-meta.xml
<RecordType>
    <fullName>COMM_Subscription</fullName>
    <active>true</active>
    <description>This record type will used to typify subscriptions</description>
    <label>Subscription</label>
</RecordType>