force-app/main/default/objects/Product2/validationRules/COMM_CPMSMandatoryForParkAndSubs.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_CPMSMandatoryForParkAndSubs</fullName>
    <active>true</active>
    <description>CPMS provider is mandatory for Parking and Subscriptions.</description>
    <errorConditionFormula>AND(
OR(ISPICKVAL(Family, &apos;Subscription&apos;),
ISPICKVAL(Family, &apos;Park&apos;)),
ISPICKVAL(COMM_CPMS__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>COMM_CPMS__c</errorDisplayField>
    <errorMessage>Please fill the Parking System used</errorMessage>
</ValidationRule>