force-app/main/default/objects/Product2/validationRules/COMM_DependentProductCodeRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_DependentProductCodeRequired</fullName>
    <active>true</active>
    <description>If Product is set as Dependent on another then the Product Code is required to be filled</description>
    <errorConditionFormula>AND(COMM_DependingOnProduct__c,
ISBLANK(COMM_ProductCodeDepedencies__c))</errorConditionFormula>
    <errorDisplayField>COMM_ProductCodeDepedencies__c</errorDisplayField>
    <errorMessage>Please fill the Product Codes that the current Product is dependent on</errorMessage>
</ValidationRule>