force-app/main/default/objects/Product2/validationRules/COMM_LimitProductName.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_LimitProductName</fullName>
    <active>true</active>
    <description>Ensures the product name does not exceed 40 characters</description>
    <errorConditionFormula>LEN(Name) &gt; 40</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Product Name must be 40 characters or less</errorMessage>
</ValidationRule>