force-app/main/default/objects/Product2/validationRules/COMM_PaymentTypeRequiredForSubPortal.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_PaymentTypeRequiredForSubPortal</fullName>
    <active>true</active>
    <description>Payment Type is mandatory for Child Products of Subscription Category sold on the Subscription Portal</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(COMM_ParentProduct__c)),
INCLUDES(COMM_WhereProductAvailable__c, &apos;Subscriptions Portal&apos;),
ISPICKVAL(Family , &apos;Subscription&apos;),
ISBLANK(COMM_PaymentType__c))</errorConditionFormula>
    <errorDisplayField>COMM_PaymentType__c</errorDisplayField>
    <errorMessage>Please fill Payment Type</errorMessage>
</ValidationRule>