force-app/main/default/objects/Product2/validationRules/COMM_PeriodicityMandatoryForChildSub.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_PeriodicityMandatoryForChildSub</fullName>
    <active>true</active>
    <description>Periodicity is mandatory for Child Products with Subscription Category</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(COMM_ParentProduct__c)),
ISPICKVAL(Family , &apos;Subscription&apos;),
ISPICKVAL(COMM_Periodicity__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>COMM_Periodicity__c</errorDisplayField>
    <errorMessage>Please fill Periodicity</errorMessage>
</ValidationRule>