force-app/main/default/objects/Product2/validationRules/COMM_SubcategoryRequiredForSubOrLounge.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_SubcategoryRequiredForSubOrLounge</fullName>
    <active>false</active>
    <description>When the Product&apos;s Category is Subscription or Lounge, the sub-category should be selected</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Family, &apos;Lounge&apos;),
        ISPICKVAL(Family, &apos;Subscription&apos;)
    ),
    ISPICKVAL(COMM_SubCategory__c, &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>COMM_SubCategory__c</errorDisplayField>
    <errorMessage>Please fill the sub-category</errorMessage>
</ValidationRule>