force-app/main/default/objects/Product2/validationRules/COMM_VerifyAlarmistic.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyAlarmistic</fullName>
    <active>true</active>
    <description>The value for Alarmistic % field cannot be negative.</description>
    <errorConditionFormula>COMM_Alarmistic__c &lt; 0</errorConditionFormula>
    <errorDisplayField>COMM_Alarmistic__c</errorDisplayField>
    <errorMessage>Alarmistic % cannot be negative</errorMessage>
</ValidationRule>