force-app/main/default/objects/Product2/validationRules/COMM_VerifyExpiredDate.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyExpiredDate</fullName>
    <active>true</active>
    <description>Check if Product date is expired</description>
    <errorConditionFormula>AND(
NOT($Permission.COMM_CustomPermission_SuperAdminByPass),
NOT(ISNEW()),
PRIORVALUE(COMM_ValidTo__c) &lt; NOW(),
COMM_ValidTo__c &lt; NOW()
)</errorConditionFormula>
    <errorMessage>Expired Products cannot be changed</errorMessage>
</ValidationRule>