force-app/main/default/objects/Product2/validationRules/COMM_VerifyPastDates.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_VerifyPastDates</fullName>
    <active>false</active>
    <description>Check if Product date is set to a past time at creation and update</description>
    <errorConditionFormula>OR(
   AND(
      ISNEW(),
      OR(COMM_ValidFrom__c &lt; NOW(),
         COMM_ValidTo__c &lt; NOW())),
   AND(
      NOT(ISNEW()),
      ISCHANGED(COMM_ValidTo__c),
      COMM_ValidTo__c &lt; NOW()))</errorConditionFormula>
    <errorMessage>Products cannot be set in the past</errorMessage>
</ValidationRule>