force-app/main/default/objects/Product2/validationRules/COMM_WhereProdAvailableRequiredForChid.validationRule-meta.xml
<ValidationRule>
    <fullName>COMM_WhereProdAvailableRequiredForChid</fullName>
    <active>true</active>
    <description>Where Product is Available is Mandatory for Child Products</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(COMM_ParentProduct__c)),
ISBLANK(COMM_WhereProductAvailable__c))</errorConditionFormula>
    <errorDisplayField>COMM_WhereProductAvailable__c</errorDisplayField>
    <errorMessage>Please fill where the Product is available for purchase</errorMessage>
</ValidationRule>