force-app/main/default/objects/Product2/listViews/ParkingProducts.listView-meta.xml
<ListView>
    <fullName>ParkingProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <columns>COMM_ValidFrom__c</columns>
    <columns>COMM_ValidTo__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>COMM_Airport__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Parking</value>
    </filters>
    <label>Parking Products</label>
</ListView>